--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -133,6 +133,20 @@ h1 {
   }
 }
 
+/**************************************/
+hr {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border: 0;
+  border-top: 3px solid $line-grey;
+}
+.bold{
+  font-weight: 700;
+}
+/**************************************/
+
+
+
 //main button style
 .btn-action {
   font-size: 14px;
@@ -168,7 +182,7 @@ h1 {
   & img {
     width: 195px;
     @media only screen and (max-width: $xsmall-device) {
-      width: 160px;
+      width: 152px;
     }
   }
 }
@@ -322,9 +336,14 @@ a {
 }
 
 //carousel
-.hero-module > .row {
+.hero-block{
+  padding-left: 0px;
+  padding-right: 0px;
+  @media only screen and (min-width: $large-device){
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
-
 .carousel-text-container {
   position: absolute;
   bottom: 0;
@@ -352,7 +371,7 @@ a {
   .carousel-text {
     padding: 15px 40px 40px 40px;
     color: white;
-    @media only screen and (max-width: $small-device-max) {
+    @media only screen and (max-width: $medium-device) {
       padding-left: 15px;
       padding-right: 15px;
     }
@@ -957,6 +976,17 @@ img {
     font-size: 12px;
     margin-left: 5px;
   }
+  & .footer-logo {
+    @media only screen and (min-width: 730px){
+      width: 75%;
+    }
+    @media only screen and (min-width: $medium-device){
+      width: 70%;
+    }
+    @media only screen and (min-width: $large-device){
+      width: 65%;
+    }
+  }
 }
 
 .lower-footer {
@@ -1016,4 +1046,10 @@ img {
 
 .container, .container-fluid{
   min-width: 320px;
+}
+
+
+//contact us page
+.contact-us-links{
+  color:#252525;
 }
