--- a/wp-content/themes/audio-active/css/audio-active-styles.css
+++ b/wp-content/themes/audio-active/css/audio-active-styles.css
@@ -29,6 +29,7 @@
 /* NAV */
 /* Text */
 /* Lines */
+/* Cut corner sizes*/
 /* Container backgrounds */
 /* Text links */
 /* Our work active styles */
@@ -54,7 +55,7 @@ h1 {
 body {
   background-color: #ebebeb; }
 
-.site-main {
+.content-bg {
   background-color: #ffffff; }
 
 hr {
@@ -103,6 +104,9 @@ hr {
     @media only screen and (max-width: 480px) {
       .site-branding img {
         width: 152px; } }
+
+.site-content {
+  padding-top: 50px; }
 
 a.top-bar-links {
   padding: 5px 5px 0;
@@ -275,7 +279,7 @@ a.bottom-bar-links {
     position: absolute;
     height: 0;
     width: 0;
-    border-width: 40px;
+    border-width: 30px;
     border-style: solid;
     top: 0;
     right: 0;
@@ -323,25 +327,24 @@ a.bottom-bar-links {
     margin-bottom: 10px; }
 
 .our-work-row {
-  background-color: #595959; }
+  background-color: #595959;
+  margin-left: 25px;
+  margin-right: 25px; }
 
-.our-work-bottom-arrow {
-  position: relative;
-  background: #595959; }
-  .our-work-bottom-arrow:after {
-    top: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: " ";
+.our-work-cut-corner {
+  border-top: solid 2px #0afff9;
+  overflow: hidden;
+  position: relative; }
+  .our-work-cut-corner::after {
+    content: '';
+    position: absolute;
     height: 0;
     width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-color: rgba(37, 37, 37, 0);
-    border-top-color: #595959;
-    border-width: 20px;
-    margin-left: -20px;
-    z-index: 1; }
+    border-width: 30px;
+    border-style: solid;
+    top: 0;
+    right: 0;
+    border-color: #0afff9 #0afff9 transparent transparent; }
 
 .our-work-link-container {
   padding: 0;
@@ -394,7 +397,7 @@ a.bottom-bar-links {
     position: absolute;
     height: 0;
     width: 0;
-    border-width: 40px;
+    border-width: 30px;
     border-style: solid;
     top: 0;
     right: 0;
@@ -460,31 +463,22 @@ article p {
          */
         border-top: 1px solid white;
         width: 100%;
-        height: auto; }
+        height: auto;
+        transform: scale(1);
+        transition: all 0.3s;
+        -webkit-transition: all 0.3s; }
+        .three-col-articles .article-module .image-container img:hover {
+          transform: scale(1.2);
+          transition: all 0.3s;
+          -webkit-transition: all 0.3s; }
 
 .set-view-all-padding {
   padding-right: 40px; }
 
 .latest-arrow-bottom {
-  position: relative;
-  background: white;
   height: 95px;
   margin-top: 40px;
   border-top: 1px solid #ebebeb; }
-  .latest-arrow-bottom:after {
-    top: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-color: rgba(37, 37, 37, 0);
-    border-top-color: white;
-    border-width: 20px;
-    margin-left: -20px;
-    z-index: 1; }
   .latest-arrow-bottom a.btn-action {
     margin-top: 30px; }
 
@@ -501,7 +495,7 @@ article p {
     position: absolute;
     height: 0;
     width: 0;
-    border-width: 40px;
+    border-width: 30px;
     border-style: solid;
     top: 0;
     right: 0;
@@ -584,23 +578,22 @@ article p {
   background-color: #e6ffff;
   text-align: center;
   padding: 75px 20px;
-  margin-left: -15px;
-  margin-right: -15px; }
+  margin: 30px 25px; }
   .quote-block::after {
     content: '';
     position: absolute;
     height: 0;
     width: 0;
-    border-width: 50px;
+    border-width: 30px;
     border-style: solid;
-    bottom: 0;
-    left: 0;
-    border-color: transparent transparent white white; }
+    top: 0;
+    right: 0;
+    border-color: white white transparent transparent; }
   @media only screen and (max-width: 767px) {
     .quote-block {
       padding: 0px 20px;
       padding-bottom: 40px;
-      background-color: #c3fff9; } }
+      background-color: #e6ffff; } }
   .quote-block .fp-quote {
     font-size: 24px;
     line-height: 1.2;
@@ -628,7 +621,7 @@ article .entry-header {
       position: absolute;
       height: 0;
       width: 0;
-      border-width: 50px;
+      border-width: 30px;
       border-style: solid;
       top: 0;
       right: 0;
@@ -728,7 +721,7 @@ img {
       position: absolute;
       height: 0;
       width: 0;
-      border-width: 17px;
+      border-width: 20px;
       border-style: solid;
       top: 0;
       right: 0;
@@ -743,7 +736,7 @@ img {
       position: absolute;
       height: 0;
       width: 0;
-      border-width: 15px;
+      border-width: 20px;
       border-style: solid;
       top: 0;
       right: 0;
@@ -760,7 +753,7 @@ img {
       position: absolute;
       height: 0;
       width: 0;
-      border-width: 15px;
+      border-width: 20px;
       border-style: solid;
       top: 0;
       right: 0;
@@ -778,7 +771,7 @@ img {
       position: absolute;
       height: 0;
       width: 0;
-      border-width: 15px;
+      border-width: 20px;
       border-style: solid;
       top: 0;
       right: 0;
