--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -318,6 +318,9 @@ a {
     }
   }
   & .drawer-menu-item {
+    &:hover{
+      @include cut-corner($small-cut-corner, $bg-dark-grey, "top");
+    }
     @media only screen and (max-width: $xsmall-device){
       font-size: 18px;
       height: auto;
@@ -349,6 +352,12 @@ a {
   }
 }
 
+.drawer-hamburger:visited{
+  background-color: $bg-dark-grey;
+}
+.drawer-hamburger:active{
+  background-color: $bg-dark-grey;
+}
 //carousel custom-col-md-12 for text
 .carousel-col-md-12 {
   position: relative;
