--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -54,7 +54,7 @@ $bg-charcoal-grey: #595959;
 $bg-light-grey: #f5f5f5;
 $bg-neon-cta: #0afff9;
 $bg-neon-cta-hover: #09e5e0;
-$bg-light-blue: #e6ffff;
+$bg-light-blue: $bg-neon-cta;
 $bg-light-grey:$line-grey;
 
 /* Text links */
@@ -590,6 +590,7 @@ a {
 
 //page template
 .page-image{
+  @include cut-corner($large-cut-corner, $bg-light-grey, "top");
   img{
     width:100%;
     height: auto;
@@ -769,8 +770,8 @@ article p{
   position: relative;
   background-color: $bg-light-blue;
   text-align: center;
-  padding: 75px 20px;
-  margin: 30px 25px;
+  padding: 35px 15px;
+  margin: 40px 25px;
   @media only screen and (max-width: $small-device-max) {
     padding: 0px 20px;
     padding-bottom: 40px;
@@ -780,8 +781,8 @@ article p{
     font-size: 24px;
     line-height: 1.2;
     font-weight: 400;
-    width: 65%;
-    margin: 40px auto;
+    width: 90%;
+    margin: 30px auto;
     @media only screen and (max-width: $small-device-max) {
       width: 100%;
       font-size: 18px;
@@ -912,6 +913,8 @@ img {
 .our-work-block{
   margin-top: 40px;
   margin-bottom: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
   .ourwork-articles-button{
     padding-bottom: 20px;
     border-bottom: solid 1px #ebebeb;
@@ -922,6 +925,8 @@ img {
 .get-involved-block{
   margin-top: 40px;
   margin-bottom: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
   & .three-col-articles{
     & .article-module {
       & .image-container {
@@ -981,10 +986,14 @@ img {
 //footer
 .site-info {
   position: relative;
-  background-color: $bg-dark-grey;
 }
 .site-copyright {
   position: relative;
+}
+.site-info-bg {
+  background-color: $bg-dark-grey;
+}
+.site-copyright-bg {
   background-color: $bg-black;
 }
 .address {
