--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -41,7 +41,8 @@ $desktop-p-fonts : 24px;
 /* Lines */
 $line-grey: #ebebeb;
 $line-blue: #c3fff9;
-
+/* Carousel*/
+$carousel-bg-text: #515151;
 /* Cut corner sizes*/
 $large-cut-corner: 30px;
 $medium-cut-corner: 20px;
@@ -237,8 +238,8 @@ a {
 }
 //bottom social links container
 .social-links-bottom {
-  background-color: $bg-charcoal-grey;
   padding-bottom: 10px;
+  margin-top: 10px;
   margin-left: -15px;
   margin-right: -15px;
 }
@@ -405,8 +406,8 @@ a {
 
 //carousel
 .hero-module{
-  @media only screen and (max-width: 767px) {
-    background-color: $bg-charcoal-grey;
+  @media only screen and (max-width: $small-device-min) {
+    background-color: $carousel-bg-text;
   }
 }
 .hero-block{
@@ -507,6 +508,9 @@ a {
     bottom: 6%;
     top: auto;
     color: white;
+    > i {
+      font-size: 0.8em;
+    }
   }
 }
 
@@ -780,6 +784,9 @@ article p{
   }
   & .btn {
     margin-top: 20px;
+    & p {
+      font-size: 14px;
+    }
   }
 }
 .make-dontation{
@@ -1025,7 +1032,7 @@ img {
     padding-left: 10px;
     padding-right: 0px;
   }
-  @media only screen and (min-width:510px) and (max-width: 767px)  {
+  @media only screen and (min-width:540px) and (max-width: 767px)  {
     margin-top: -105px;
   }
   @media only screen and (min-width: $medium-device)  {
@@ -1102,7 +1109,6 @@ img {
   padding: 20px;
   position: relative;
   @media only screen and (max-width: $small-device-max) {
-    background-color: $bg-charcoal-grey;
     padding: 20px 5px;
   }
   @media only screen and (min-width: $medium-device) {
