--- a/wp-content/themes/audio-active/css/audio-active-styles.css
+++ b/wp-content/themes/audio-active/css/audio-active-styles.css
@@ -970,6 +970,9 @@ img {
 /************************************/
 .site-info {
   position: relative; }
+  @media only screen and (min-width: 768px) {
+    .site-info {
+      margin-bottom: 20px; } }
 
 .site-copyright {
   position: relative; }
@@ -998,7 +1001,7 @@ img {
 .email {
   padding-left: 15px;
   padding-right: 15px; }
-  @media only screen and (min-width: 510px) and (max-width: 767px) {
+  @media only screen and (min-width: 540px) and (max-width: 767px) {
     .email {
       margin-top: -25px; } }
   @media only screen and (min-width: 768px) {
@@ -1044,7 +1047,7 @@ img {
     @media only screen and (max-width: 767px) {
       .info-symbols > .fa-phone {
         margin-left: 0px; } }
-  @media only screen and (min-width: 510px) and (max-width: 767px) {
+  @media only screen and (min-width: 540px) and (max-width: 767px) {
     .info-symbols > .email-custom-class {
       margin-right: 0; } }
   .info-symbols > a {
@@ -1089,11 +1092,11 @@ img {
     .lower-footer {
       padding: 20px 5px 10px 5px; } }
 
-@media only screen and (min-width: 320px) and (max-width: 509px) {
+@media only screen and (min-width: 320px) and (max-width: 539px) {
   .block-margin {
     margin-top: 20px; } }
 
-@media only screen and (min-width: 510px) and (max-width: 767px) {
+@media only screen and (min-width: 540px) and (max-width: 767px) {
   .block-margin {
     margin-top: 20px; } }
 
@@ -1113,7 +1116,7 @@ img {
   .adjust-margin {
     margin-top: 0px; } }
 
-@media only screen and (min-width: 510px) and (max-width: 767px) {
+@media only screen and (min-width: 540px) and (max-width: 767px) {
   .custom-breakpoint {
     width: 50%; } }
 
