--- a/wp-content/themes/audio-active/css/audio-active-styles.css
+++ b/wp-content/themes/audio-active/css/audio-active-styles.css
@@ -983,20 +983,20 @@ img {
 .site-copyright-bg {
   background-color: #252525; }
 
-@media only screen and (min-width: 768px) {
-  .address {
-    margin-top: -105px;
-    padding-left: 10px;
-    padding-right: 0px; } }
-
-@media only screen and (min-width: 540px) and (max-width: 767px) {
-  .address {
-    margin-top: -105px; } }
-
-@media only screen and (min-width: 992px) {
-  .address {
-    margin-top: -5px;
-    padding-left: 11px; } }
+.address {
+  margin-top: 10px; }
+  @media only screen and (min-width: 768px) {
+    .address {
+      margin-top: -105px;
+      padding-left: 10px;
+      padding-right: 0px; } }
+  @media only screen and (min-width: 540px) and (max-width: 767px) {
+    .address {
+      margin-top: -105px; } }
+  @media only screen and (min-width: 992px) {
+    .address {
+      margin-top: -5px;
+      padding-left: 11px; } }
 
 .email {
   padding-left: 15px;
@@ -1047,9 +1047,11 @@ img {
     @media only screen and (max-width: 767px) {
       .info-symbols > .fa-phone {
         margin-left: 0px; } }
-  @media only screen and (min-width: 540px) and (max-width: 767px) {
-    .info-symbols > .email-custom-class {
-      margin-right: 0; } }
+  .info-symbols > .email-custom-class {
+    text-decoration: underline; }
+    @media only screen and (min-width: 540px) and (max-width: 767px) {
+      .info-symbols > .email-custom-class {
+        margin-right: 0; } }
   .info-symbols > a {
     margin-right: 20px; }
     @media only screen and (min-width: 992px) {
