--- a/wp-content/themes/audio-active/css/audio-active-styles.css
+++ b/wp-content/themes/audio-active/css/audio-active-styles.css
@@ -118,6 +118,21 @@ a.top-bar-links {
   a.top-bar-links:hover {
     color: white; }
 
+@media only screen and (max-width: 768px) {
+  .site-footer {
+    overflow: hidden;
+    position: relative; }
+    .site-footer::after {
+      content: '';
+      position: absolute;
+      height: 0;
+      width: 0;
+      border-width: 30px;
+      border-style: solid;
+      top: 0;
+      right: 0;
+      border-color: #252525 #252525 transparent transparent; } }
+
 .footer-social-link-container {
   width: 20%;
   float: left; }
