--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -484,14 +484,14 @@ a {
   @include cut-corner($large-cut-corner, $bg-light-grey, "top");
 }
 
-.fa-chevron-left {
+.fa-chevron-left, .glyphicon-menu-left {
   left: 0;
   @media only screen and (max-width: $small-device-max) {
     left: 0;
     //font-size: 20px;
   }
 }
-.fa-chevron-right {
+.fa-chevron-right, .glyphicon-menu-right {
   right: 0;
   @media only screen and (max-width: $small-device-max) {
     right: 0;
@@ -521,24 +521,30 @@ a {
 
 .carousel-control {
   width: 45px;
-  & .fa{
-    bottom: 5%;
-    top: auto;
+  width: 45px;
+  position: absolute;
+  bottom: 6%;
+  top: auto;
+  font-size: 25px;
+  & .fa, .glyphicon{
     width: 40px;
     height: 40px;
     border: 1px solid white;
     border-radius: 50%;
     color: $bg-neon-cta;
     opacity: 1;
-    &.fa-chevron-right{
-      padding-top: 4px;
-      padding-left: 4px;
-    }
-    &.fa-chevron-left{
-      padding-top: 4px;
-      padding-right: 4px;
-    }
   }
+}
+
+.glyphicon-menu-left:before {
+  position: absolute;
+  top: 6px;
+  left: 7px;
+}
+.glyphicon-menu-right:before {
+  position: absolute;
+  top: 6px;
+  left: 7px;
 }
 
 .left.carousel-control{
